# pvc-backup-operator

./: .gitignore  .tool-versions  Earthfile  justfile  pyproject.toml
.github/workflows/: on-pull-request.yaml  on-release.yaml
charts/pvc-backup-operator/: Chart.yaml
crds/: backup-config.yaml
pvcbackupoperator/: __init__.py  annotations.py  processor.py
