[tool.poetry]
name = "pvc-backup-operator"
version = "0.1.0"
description = ""
authors = ["Joe Lombrozo <joe@djeebus.net>"]
packages = [{ include = "pvcbackupoperator" }]

[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.36.1"
kubernetes = "^26.1.0"
jmespath = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
